added changes to html

--- a/index.html
+++ b/index.html
@@ -7,21 +7,22 @@
 </head>
 
 <body>
+  
   <div class="header">
     <div><img class="logo" src="https://upload.wikimedia.org/wikipedia/commons/thumb/e/e4/BuzzFeed.svg/1280px-BuzzFeed.svg.png"></div>
-    <div>News</div>
+    <div></div>
     <div>Videos</div>
-    <div>Quizes</div>
-    <div>Tasty</div>
+    <div>Fan page</div>
+    <div></div>
     <input placeholder="Search">
   </div>
   </div>
-  <h1>Which anime character are you?</h1>
-  <p id="caption">With dedication, you'll be there before you know it. </p>
-  <img id="tomImg" src="http://th.downloadblog.it/jSwEBLI80OIF2oYywP73GVj3zCo=/fit-in/655xorig/http%3A%2F%2Fmedia.downloadblog.it%2F5%2F57d%2Ftom-di-myspace.jpg">
-  <a href="https://en.wikipedia.org/wiki/Tom_Anderson">Tom Anderson</a>
-  <div id="tom">Buzzfeed Contributor</div>
-  <img class="siliconValley" src="https://www.hbo.com/content/dam/hbodata/series/silicon-valley/episodes/s3/silicon-valley-3-3000x1688.jpg/_jcr_content/renditions/cq5dam.web.1200.675.jpeg">
+  <h1 id ="hi">ANIME!!!!</h1>
+  <p id="caption">What anime character resents you find out in a few!!! </p>
+  <img id="Champions" src="https://image.myanimelist.net/ui/tJ2Fy6YEJKrcduKF0rRJJH6S5GoWYIMEtxyHMONLFiYFpnxFd3dcr9OTP33qVYudToKmm_0DBR8gm8iZosfY5GN-Q4Ez5ZoivgRxaRkU_fcUVyj5tbXGk82Uw1bmSAfz6Vh8nZgNwHIaFdxU1SFR7w">
+  <a href=""></a>
+  <div id="tom">
+  <img class="" src="">
   <div class="questions">
     <h2>Let's start with your Name</h2>
     <input id="name" placeholder="Enter Your Name Here">
@@ -31,15 +32,17 @@
     <input id="question2" placeholder="Smart, Dumb, Romantic, Loving">
     <h2>What was Your character gone through?Lost of mother, Not accepted, Not human, Lost of a friend </h2>
     <input id="question3" placeholder=" mine is lost of a friend">
-  </div>
+  
   <h2>What will Your character achieve?Best Swordsman,All Blue,best pianist,Strongest man</h2>
   <input id="question4" placeholder="">
   </div>
+  </div>
   <div class="result">
-    <button>Click here to land your dream job!</button>
+    <button>IS this you?</button>
   </div>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
   <script src='js/script.js'></script>
+  
 </body>
 
 </html>
