worked on if else

--- a/index.html
+++ b/index.html
@@ -30,15 +30,16 @@
     <input id="question1" placeholder="Fighter, Cook, Pianist, Swordsman">
     <h2> Would you want to be Smart, Dumb, Romantic , or Loving ?</h2>
     <input id="question2" placeholder="Smart, Dumb, Romantic, Loving">
-    <h2>What was Your character gone through?Lost of mother, Not accepted, Not human, Lost of a friend </h2>
-    <input id="question3" placeholder=" mine is lost of a friend">
+    <h2>What was Your character gone through?Lost of mother, Not accepted, Not human, Lost of friend </h2>
+    <input id="question3" placeholder=" mine is lost of friend">
   
   <h2>What will Your character achieve?Best Swordsman,All Blue,best pianist,Strongest man</h2>
-  <input id="question4" placeholder="">
+  <input id="question4" placeholder=";-)">
   </div>
   </div>
   <div class="result">
     <button>IS this you?</button>
+    <h1 id="characters" ></h1>
   </div>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
   <script src='js/script.js'></script>
